--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
     ================================================= -->
     <nav class="navbar navbar-expand-lg navbar-dark trans-navigation fixed-top navbar-togglable">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="index-3.html">
                 <h3>Eko-Guarantee</h3>
             </a>
             <!-- Toggler -->
@@ -67,7 +67,7 @@
                         </a>
                     </li></a>
                     <li class="nav-item ">
-                        <a href="service.html" class="nav-link js-scroll-trigger">
+                        <a href="" class="nav-link js-scroll-trigger">
                             Services
                         </a>
                     </li>
@@ -124,11 +124,11 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="section-heading">
-                            <h1 class="text-white">EKO-Guarantee Private limited possess more than 2 decades of experience wide its promoters, providing expertise world wide to meet the increasing demand of eco-friendly and sustainable products.</h1>
+                            <h1 class="text-white">We are trying to deliver 100% quality product and success their business to achieve ultimate goal.</h1>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <p class="lead text-white">EKO-Guarantee Private limited possess more than 2 decades of experience wide its promoters, providing expertise world wide to meet the increasing demand of eco-friendly and sustainable products. We provide market oriented solutions to our clients to help them emerge better and at par with others internationally. </p>
+                        <p class="lead text-white">We are providing best service since 1990 to present , committed to best service delivery.Nullam metus enim, placerat in lacus vel, porttitor egestas libero. Etiam ex risus, feugiat eget accumsan eu, sagittis eu urna. In eget ultrices metus. Nunc accumsan </p>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                         <div class="project-content-block">
                             <h4>Do you know who we are?</h4>
                             <h2>More than just service your products...</h2>
-                            <p>Our certification is flexible and focused on meeting the market requirements and standards. Once the Non- Gmo project verification is complete and verified , the applicant will be issued a certificate and will be labeled as “ NON-GMO Verified”</p>
+                            <p>Explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and we will give you a complete account of the system.</p>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
 
                         <!-- Subheading -->
                         <p>
-                            Our duty towards you is to share our experience we're reaching in our work path with you.
+                            Our duty towards you is to share our experience we're reaching in our work with you.
                         </p>
                     </div>
                 </div>
@@ -239,9 +239,9 @@
                     <div class="footer-widget">
                         <!-- Brand -->
                         <a href="#" class="footer-brand text-white">
-                            Eko-Guarantee
+                            Rapoo
                         </a>
-                        <p>Certifying Non-Gmo integrity to national and international standards .</p>
+                        <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
 
@@ -260,7 +260,16 @@
                                     Privacy policy
                                 </a>
                             </li>
-                            
+                            <li>
+                                <a href="#">
+                                    Affiliate services
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Help and support
+                                </a>
+                            </li>
                             <li>
                                 <a href="#">
                                     Frequently Asked Question
@@ -277,18 +286,28 @@
                         <!-- Links -->
                         <ul class="footer-links ">
                             <li>
-                                <a href="service.html">
+                                <a href="#">
                                     Services
                                 </a>
                             </li>
                             <li>
-                                <a href="about.html">
+                                <a href="#">
                                     About Us
                                 </a>
                             </li>
-                            
                             <li>
-                                <a href="contact.html">
+                                <a href="#">
+                                    Pricing
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    Products Shop
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="#">
                                     Contact
                                 </a>
                             </li>
@@ -321,7 +340,7 @@
                 <div class="col-lg-12">
                     <!-- Copyright -->
                     <p class="footer-copy ">
-                        &copy; Copyright <span class="current-year">Eko-Guarantee</span> All rights reserved.
+                        &copy; Copyright <span class="current-year">Themefisher</span> All rights reserved.
                     </p>
                 </div>
             </div> <!-- / .row -->
