--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
                         <!-- Subheading -->
                         <p class="lead mb-4">
-                          Eko-Guarantee Pvt Ltd posses more than 2 decades of experinece wide promoters providing expertise worldwide to meet increasing demand of Eco-Firendly and sustainable products.
+                          Eko-Guarantee pvt. ltd. posses more than 2 decades of experience with promoters providing expertise worldwide to meet increasing demand of Eco-Friendly and sustainable products.
                         </p>
 
                         <!-- Button -->
@@ -219,7 +219,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">What is GMO?</h4>
-                        <p>Genetically modified organisms,is a plant, animal, microorganism or other organisms whose gentic makeup has veen modified in a lab.</p>
+                        <p>Genetically Modified Organism, is a plant, animal, micro-organism or other organisms whose gentic makeup has veen modified in a lab.</p>
                     </div>
                 </div>
 
@@ -228,8 +228,8 @@
                         <div class="img-icon-block mb-4">
                             <i class="fa fa-question-circle"></i>
                         </div>
-                        <h4 class="mb-2">Why Non GMO?</h4>
-                        <p>Non-GMO Stands for non-genetically modified organsism, an refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO roduct verification on their products, provides them leverage over others in the global market.</p>
+                        <h4 class="mb-2">Why NON-GMO?</h4>
+                        <p>Non-GMO stands for non-genetically modified organsism, refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO product verification on their products, provides them leverage over others in the global market.</p>
                     </div>
                 </div>
 
@@ -239,7 +239,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">Impact of GMO? </h4>
-                        <p>More than 80% of all GMOs grown worldwide are engineeredfor herbicide tolerance. As a result use of hebicide has increased. Once released in the environment these novel organisms cant be recalled.</p>
+                        <p>More than 80% of all GMOs grown worldwide are engineered for herbicide tolerance. As a result use of hebicide has increased. Once released in the environment these novel organisms can't be recalled.</p>
                     </div>
                 </div>
 
@@ -248,8 +248,8 @@
                         <div class="img-icon-block mb-4">
                             <i class="fa fa-question-circle"></i>
                         </div>
-                        <h4 class="mb-2">How can I avoid GMOS</h4>
-                        <p>In the US GMOS are in majorority of onventional processed food. To avoid GMOs, look for the Non-GMO Project verfied label.</p>
+                        <h4 class="mb-2">How can I avoid GMOs?</h4>
+                        <p>In the US, GMOs are in majority of conventional processed food, to avoid GMOs. Look for the Non-GMO product verfied label.</p>
                     </div>
                 </div>
             </div>
@@ -295,14 +295,14 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/submit.png" height="75px" width="75px"></i>
                         <h3>Document Submission</h3>
-                        <p>You submit detailed information about the processes an products for review. This includes risk assessment,SOPs, production facilities and co packers information.</p>
+                        <p>You submit detailed information about the processes and products for review. This includes risk assessment, SOPs, production facilities and co-packers information.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/review.png" height="100px" width="75px"></i>
                         <h3>Document Review</h3>
-                        <p>EKO_GUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
+                        <p>EKOGUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
                     </div>
                 </div>
 
@@ -317,14 +317,14 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/ph.png" height="75px" width="75px"></i>
                         <h3>Corrective Action Review And Certification Decision</h3>
-                        <p>Any required Corrective action respones eill be reviewed for compliance and a certification decision is made.</p>
+                        <p>Any required corrective action responses will be reviewed for compliance and a certification decision is made.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 ">
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/cert.png" height="75px" width="75px"></i>
                         <h3>Certification And Ongoing Compliance</h3>
-                        <p>After approval, eligible to use your Non-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to scope mid year.</p>
+                        <p>After approval, eligible to use your Non-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to the scope mid year.</p>
                     </div>
                 </div>
             </div>
@@ -387,7 +387,7 @@
                         <a href="#" class="footer-brand text-white">
                             EKO-GUARANTEE
                         </a>
-                        <p>Certifying Non-Gmo integrity to national and international standards .</p>
+                        <p>Certifying NON-GMO integrity to national and international standards .</p>
                     </div>
                 </div>
 
