--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+been<!doctype html>
 <html lang="en">
 
 <head>
@@ -68,7 +68,7 @@
                     <div class="logo d-none d-lg-block">
                         <!-- Brand -->
                         <a class="navbar-brand js-scroll-trigger" href="index.html">
-                            <h2>Eko-Guarentee</h2>
+                            <h2>Eko-Guarantee</h2>
                         </a>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="info-block">
                             <h5 class="font-weight-500">+91 9971016425</h5>
-                            <p>Call Free</p>
+                            <p>Call Here</p>
                         </div>
                     </div>
 
@@ -114,7 +114,7 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary main-nav navbar-togglable rounded-radius">
 
                 <a class="navbar-brand d-lg-none d-block" href="">
-                    <h4>EkoGuarantee</h4>
+                    <h4>Eko-Guarantee</h4>
                 </a>
                 <!-- Toggler -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -188,7 +188,7 @@
 
                         <!-- Subheading -->
                         <p class="lead mb-4">
-                          Eko-Guarantee pvt. ltd. posses more than 2 decades of experience with promoters providing expertise worldwide to meet increasing demand of Eco-Friendly and sustainable products.
+                          Eko-Guarantee pvt. ltd. possess more than 2 decades of experience with promoters providing expertise worldwide to meet increasing demand of Eco-Friendly and sustainable products.
                         </p>
 
                         <!-- Button -->
@@ -219,7 +219,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">What is GMO?</h4>
-                        <p>Genetically Modified Organism, is a plant, animal, micro-organism or other organisms whose gentic makeup has veen modified in a lab.</p>
+                        <p>Genetically Modified Organism, is a plant, animal, micro-organism or other organisms whose gentic makeup has been modified in a lab.</p>
                     </div>
                 </div>
 
@@ -229,7 +229,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">Why NON-GMO?</h4>
-                        <p>Non-GMO stands for non-genetically modified organsism, refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO product verification on their products, provides them leverage over others in the global market.</p>
+                        <p>NON-GMO stands for non-genetically modified organsism, refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO product verification on their products, provides them leverage over others in the global market.</p>
                     </div>
                 </div>
 
@@ -249,7 +249,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">How can I avoid GMOs?</h4>
-                        <p>In the US, GMOs are in majority of conventional processed food, to avoid GMOs. Look for the Non-GMO product verfied label.</p>
+                        <p>In the US, GMOs are in majority of conventional processed food, to avoid GMOs. Look for the NON-GMO product verfied label.</p>
                     </div>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/review.png" height="100px" width="75px"></i>
                         <h3>Document Review</h3>
-                        <p>EKOGUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
+                        <p>EKO-GUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
                     </div>
                 </div>
 
@@ -324,7 +324,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/cert.png" height="75px" width="75px"></i>
                         <h3>Certification And Ongoing Compliance</h3>
-                        <p>After approval, eligible to use your Non-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to the scope mid year.</p>
+                        <p>After approval, eligible to use your NON-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to the scope mid year.</p>
                     </div>
                 </div>
             </div>
