--- a/about.html
+++ b/about.html
@@ -124,11 +124,11 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="section-heading">
-                            <h1 class="text-white">We are trying to deliver 100% quality product and success their business to achieve ultimate goal.</h1>
+                            <h1 class="text-white">Eko-Guarantee pvt. ltd. possess more than 2 decades of experience with promoters providing expertise worldwide to meet increasing demand of Eco-Friendly and sustainable products.</h1>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <p class="lead text-white">We are providing best service since 1990 to present , committed to best service delivery.Nullam metus enim, placerat in lacus vel, porttitor egestas libero. Etiam ex risus, feugiat eget accumsan eu, sagittis eu urna. In eget ultrices metus. Nunc accumsan </p>
+                        <p class="lead text-white">Eko-Guarantee pvt. ltd. possess more than 2 decades of experience with promoters providing expertise worldwide to meet increasing demand of Eco-Friendly and sustainable products. </p>
                     </div>
                 </div>
             </div>
@@ -146,7 +146,7 @@
                         <div class="project-content-block">
                             <h4>Do you know who we are?</h4>
                             <h2>More than just service your products...</h2>
-                            <p>The complexity and diversity in the regulatory systems of the NON GMO market makes it difficult for the organizations to approach the global platform.
+                            <p>The complexity and diversity in the regulatory systems of the NON-GMO market makes it difficult for the organizations to approach the global platform.
 We provide market oriented solutions to our clients to help them emerge better and at par with others internationally.
 Our certification is flexible and focused on meeting the market requirements and standards..</p>
                         </div>
@@ -241,9 +241,9 @@ Our certification is flexible and focused on meeting the market requirements and
                     <div class="footer-widget">
                         <!-- Brand -->
                         <a href="#" class="footer-brand text-white">
-                            Rapoo
+                            Eko-Guarantee
                         </a>
-                        <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Certifying NON-GMO integrity to national and international standards .</p>
                     </div>
                 </div>
 
@@ -342,7 +342,7 @@ Our certification is flexible and focused on meeting the market requirements and
                 <div class="col-lg-12">
                     <!-- Copyright -->
                     <p class="footer-copy ">
-                        &copy; Copyright <span class="current-year">Themefisher</span> All rights reserved.
+                        &copy; Copyright <span class="current-year">Eko-Guarentee</span> All rights reserved.
                     </p>
                 </div>
             </div> <!-- / .row -->
