--- a/service.html
+++ b/service.html
@@ -148,7 +148,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark trans-navigation fixed-top navbar-togglable">
         <div class="container">
             <a class="navbar-brand" href="index-3.html">
-                <h3>EkoGuarantee</h3>
+                <h3>Eko-Guarantee</h3>
             </a>
             <!-- Toggler -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -225,7 +225,7 @@
             <div class="row justify-content-center mb-5">
                 <div class="col-lg-7 pl-4 text-center">
                     <div class="service-heading">
-                        <h1>Project Verification is applicable at various supply chain levels.</h1>
+                        <h1>Project verification is applicable at various supply chain levels.</h1>
                     </div>
                 </div>
             </div>
@@ -395,21 +395,21 @@
             </div> <!-- / .row -->
 
             <div class="row">
-                <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+                <div class="col-lg-6 col-sm-6 col-md-6 mb-30">
                     <div class="web-service-block">
                         <i><img src="images/icon/increase.png" style="height:90px;"></i>
                         <h3>Increasing consumer demand.</h3>
                         <p>In today's world customer wants to know what is in their food. With increases awareness for NON-GMO there is a sift increase in demand for certified products (food,textiles, cosmetics etc.)</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+                <div class="col-lg-6 col-sm-6 col-md-6 mb-30">
                     <div class="web-service-block">
                         <i><img src="images/icon/ind.png" style="height:90px;"></i>
                         <h3>Increasing Industry Demand</h3>
                         <p>Companies at all stages of supply chhain starting from farm to supply to manufacture to supply to package have seen huge benifits in terms of increase in sales on NON-GMI verified products.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-md-6 mb-30">
+                <div class="col-lg-6 col-sm-6 col-md-6 mb-30">
                     <div class="web-service-block">
                         <i><img src="images/icon/trust.png" style="height:90px;"></i>
                         <h3>Greater Trust</h3>
@@ -417,7 +417,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-sm-6 col-md-6 ">
+                <div class="col-lg-6 col-sm-6 col-md-6 ">
                     <div class="web-service-block">
                         <i><img src="images/icon/price.png" style="height:90px;"></i>
                         <h3>Better prices</h3>
@@ -460,7 +460,7 @@
                 </li>
                 <li>
             <div class="content">
-              <h3>Acceptance of Proposal</h3>
+              <h3>Acceptance of proposal</h3>
               <p>Receive your quote</p>
               <p>Meet on terms</p>
 
@@ -481,7 +481,7 @@
                 </li>
                 <li>
             <div class="content">
-              <h3>Technical evaluation through inspection and Testing</h3>
+              <h3>Technical evaluation through inspection and testing</h3>
               <p>Your product will be evaluated bt inspecting and testing.</p>
 
             </div>
@@ -540,9 +540,9 @@
                     <div class="footer-widget">
                         <!-- Brand -->
                         <a href="#" class="footer-brand text-white">
-                            EkoGuarantee
+                            Eko-Guarantee
                         </a>
-                        <p>Each theme featured at the Bootstrap marketplace has been reviewed by Bootstrap's creators.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p>Certifying NON-GMO integrity to national and international standards.</p>
                     </div>
                 </div>
 
