--- a/service2.html
+++ b/service2.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="themefisher.com">
 
-  <title>Eko-Guarantee- Services</title>
+  <title>EcoGuarantee- Services</title>
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
@@ -45,7 +45,7 @@
                 <div class="col-lg-6 col-md-6">
                     <div class="top-bar-left text-white">
                         <i class="fa fa-map-marker"></i>
-                        <span class="ml-2">Eko-Guarentee</span>
+                        <span class="ml-2">Eko-Guarantee</span>
                     </div>
                 </div>
 
@@ -68,7 +68,7 @@
                     <div class="logo d-none d-lg-block">
                         <!-- Brand -->
                         <a class="navbar-brand js-scroll-trigger" href="index.html">
-                            <h2>Eko-Guarentee</h2>
+                            <h2>Eko-Guarantee</h2>
                         </a>
                     </div>
                 </div>
@@ -132,12 +132,12 @@
 
                         </li>
                         <li class="nav-item ">
-                            <a href="about.html" class="nav-link js-scroll-trigger">
+                            <a href="#" class="nav-link js-scroll-trigger">
                                 About Us
                             </a>
                         </li>
                         <li class="nav-item ">
-                            <a href="service.html" class="nav-link js-scroll-trigger">
+                            <a href="#" class="nav-link js-scroll-trigger">
                                 Services
                             </a>
                         </li>
@@ -154,7 +154,7 @@
                         </li>
 
                         <li class="nav-item ">
-                            <a href="contact.html" class="nav-link">
+                            <a href="#" class="nav-link">
                                 Contact Us
                             </a>
                         </li>
@@ -343,7 +343,16 @@
                                        Privacy policy
                                    </a>
                                </li>
-                               
+                               <li>
+                                   <a href="#">
+                                       Affiliate services
+                                   </a>
+                               </li>
+                               <li>
+                                   <a href="#">
+                                       Help and support
+                                   </a>
+                               </li>
                                <li>
                                    <a href="#">
                                        Frequently Asked Question
@@ -360,19 +369,28 @@
                            <!-- Links -->
                            <ul class="footer-links ">
                                <li>
-                                   <a href="service.html">
+                                   <a href="#">
                                        Services
                                    </a>
                                </li>
                                <li>
-                                   <a href="about.html">
+                                   <a href="#">
                                        About Us
                                    </a>
                                </li>
-                               
+                               <li>
+                                   <a href="#">
+                                       Pricing
+                                   </a>
+                               </li>
+                               <li>
+                                   <a href="#">
+                                       Products Shop
+                                   </a>
+                               </li>
 
                                <li>
-                                   <a href="contact.html">
+                                   <a href="#">
                                        Contact
                                    </a>
                                </li>
