--- a/service2.html
+++ b/service2.html
@@ -195,7 +195,7 @@
                     <h5>Leave a Message</h5>
                     <!-- Heading -->
                     <h2 class="section-title mb-2 ">
-                        Tell us about <span class="font-weight-normal">yourself</span>
+                        Tell us about yourself!
                     </h2>
 
                     <!-- Subheading -->
