--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
   <meta name="author" content="themefisher.com">
 
-  <title>Eko-Guarantee - Contact Us</title>
+  <title>EkoGuarantee - Contact &amp; Corporate template</title>
 
   <!-- bootstrap.min css -->
   <link rel="stylesheet" href="plugins/bootstrap/css/bootstrap.min.css">
@@ -43,8 +43,8 @@
     ================================================= -->
     <nav class="navbar navbar-expand-lg navbar-dark trans-navigation fixed-top navbar-togglable">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <h3>Eko-Guarantee</h3>
+            <a class="navbar-brand" href="index-3.html">
+                <h3>EkoGuarantee</h3>
             </a>
             <!-- Toggler -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,12 +62,12 @@
 
                     </li>
                     <li class="nav-item ">
-                        <a href="about.html" class="nav-link js-scroll-trigger">
+                        <a href="#" class="nav-link js-scroll-trigger">
                             About Us
                         </a>
                     </li>
                     <li class="nav-item ">
-                        <a href="service.html" class="nav-link js-scroll-trigger">
+                        <a href="#" class="nav-link js-scroll-trigger">
                             Services
                         </a>
                     </li>
@@ -84,7 +84,7 @@
                     </li>
 
                     <li class="nav-item ">
-                        <a href="contact.html" class="nav-link">
+                        <a href="#" class="nav-link">
                             Contact Us
                         </a>
                     </li>
@@ -132,7 +132,7 @@
                     <div class="contact-info-block text-center">
                         <i class="pe-7s-mail"></i>
                         <h4>Email</h4>
-                        <p class="lead">info@eko-guarantee.com</p>
+                        <p class="lead">supportdb@dthememascot.com</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6">
@@ -153,7 +153,7 @@
                     <h5>Leave a Message</h5>
                     <!-- Heading -->
                     <h2 class="section-title mb-2 ">
-                        Tell us about <span class="font-weight-normal">yourself</span>
+                        Tell us about yourself!
                     </h2>
 
                     <!-- Subheading -->
@@ -187,7 +187,7 @@
                                     </label>
 
                                     <div class="input-group">
-                                        <input class="form-control" name="name" id="name" required="" placeholder="Name" type="text">
+                                        <input class="form-control" name="name" id="name" required="" placeholder="John Doe" type="text">
                                     </div>
                                 </div>
                             </div>
@@ -202,7 +202,7 @@
                                     </label>
 
                                     <div class="input-group ">
-                                        <input class="form-control" name="email" id="email" required="" placeholder="your@gmail.com" type="email">
+                                        <input class="form-control" name="email" id="email" required="" placeholder="john@gmail.com" type="email">
                                     </div>
                                 </div>
                             </div>
@@ -219,7 +219,7 @@
                                     </label>
 
                                     <div class="input-group">
-                                        <input class="form-control" name="subject" id="subject" required="" placeholder="Web design" type="text">
+                                        <input class="form-control" name="subject" id="subject" required="" placeholder="certification" type="text">
                                     </div>
                                 </div>
                             </div>
@@ -234,7 +234,7 @@
                                     </label>
 
                                     <div class="input-group ">
-                                        <input class="form-control" id="phone" name="phone" required="" placeholder="1-800-643-4500" type="text">
+                                        <input class="form-control" id="phone" name="phone" required="" placeholder="+91 999*****99" type="text">
                                     </div>
                                 </div>
                             </div>
@@ -301,7 +301,15 @@
                                        Privacy policy
                                    </a>
                                </li>
-                              
+                               <li>
+                                   <a href="#">
+                                       Affiliate services
+                                   </a>
+                               </li>
+                               <li>
+                                   <a href="#">
+                                       Help and support
+                                   </a>
                                </li>
                                <li>
                                    <a href="#">
@@ -319,20 +327,28 @@
                            <!-- Links -->
                            <ul class="footer-links ">
                                <li>
-                                   <a href="service.html">
+                                   <a href="#">
                                        Services
                                    </a>
                                </li>
                                <li>
-                                   <a href="about.html">
+                                   <a href="#">
                                        About Us
                                    </a>
                                </li>
-                               
+                               <li>
+                                   <a href="#">
+                                       Pricing
+                                   </a>
+                               </li>
+                               <li>
+                                   <a href="#">
+                                       Products Shop
+                                   </a>
                                </li>
 
                                <li>
-                                   <a href="contact.html">
+                                   <a href="#">
                                        Contact
                                    </a>
                                </li>
