--- a/about.html
+++ b/about.html
@@ -124,11 +124,11 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="section-heading">
-                            <h1 class="text-white">Eko-Guarantee pvt. ltd. possess more than 2 decades of experience with promoters providing expertise worldwide to meet increasing demand of Eco-Friendly and sustainable products.</h1>
+                            <h1 class="text-white">Eko-Guarantee Pvt. Ltd. possesses more than 2 decades of experience with promoters providing expertise worldwide to meet the increasing demand for Eco-Friendly and sustainable products.</h1>
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <p class="lead text-white">Eko-Guarantee pvt. ltd. possess more than 2 decades of experience with promoters providing expertise worldwide to meet increasing demand of Eco-Friendly and sustainable products. </p>
+                        <p class="lead text-white">Eko-Guarantee Pvt. Ltd. possesses more than 2 decades of experience with promoters providing expertise worldwide to meet the increasing demand for Eco-Friendly and sustainable products. </p>
                     </div>
                 </div>
             </div>
@@ -146,9 +146,7 @@
                         <div class="project-content-block">
                             <h4>Do you know who we are?</h4>
                             <h2>More than just service your products...</h2>
-                            <p>The complexity and diversity in the regulatory systems of the NON-GMO market makes it difficult for the organizations to approach the global platform.
-We provide market oriented solutions to our clients to help them emerge better and at par with others internationally.
-Our certification is flexible and focused on meeting the market requirements and standards..</p>
+                            <p>The complexity and diversity in the regulatory systems of the NON-GMO market makes it difficult for organizations to approach the global platform. We provide market-oriented solutions to our clients to help them emerge better and at par with others internationally. Our certification is flexible and focused on meeting market requirements and standards.</p>
                         </div>
                     </div>
                 </div>
