--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
                     <div class="main-banner">
                         <!-- Heading -->
                         <h1 class="display-4 mb-4 font-weight-normal">
-                            Specialized on Certification For Non GMO Food and Products.
+                            Certifying NON-GMO integrity to national and international standards .
                         </h1>
 
                         <!-- Subheading -->
                         <p class="lead mb-4">
-                          Eko-Guarantee pvt. ltd. possess more than 2 decades of experience with promoters providing expertise worldwide to meet increasing demand of Eco-Friendly and sustainable products.
+                          Eko-Guarantee Pvt. Ltd. possesses more than 2 decades of experience with promoters providing expertise worldwide to meet the increasing demand for Eco-Friendly and sustainable products.
                         </p>
 
                         <!-- Button -->
@@ -219,7 +219,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">What is GMO?</h4>
-                        <p>Genetically Modified Organism, is a plant, animal, micro-organism or other organisms whose gentic makeup has been modified in a lab.</p>
+                        <p>Genetically Modified Organism, is a plant, animal, micro-organism or other organisms whose genetic makeup has been modified in a lab.</p>
                     </div>
                 </div>
 
@@ -229,7 +229,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">Why NON-GMO?</h4>
-                        <p>NON-GMO stands for non-genetically modified organsism, refers to plants, animals or other organisms whose gentic material is changed in ways that do no occur naturally. Brands that achieve NON-GMO product verification on their products, provides them leverage over others in the global market.</p>
+                        <p>NON-GMO stands for the non-genetically modified organism refers to plants, animals or other organisms whose genetic material is changed in ways that do not occur naturally. Brands that achieve NON-GMO product verification on their products, provide them leverage over others in the global market.</p>
                     </div>
                 </div>
 
@@ -239,7 +239,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">Impact of GMO? </h4>
-                        <p>More than 80% of all GMOs grown worldwide are engineered for herbicide tolerance. As a result use of hebicide has increased. Once released in the environment these novel organisms can't be recalled.</p>
+                        <p>NON-GMO stands for the non-genetically modified organism refers to plants, animals or other organisms whose genetic material is changed in ways that do not occur naturally. Brands that achieve NON-GMO product verification on their products, provide them leverage over others in the global market.</p>
                     </div>
                 </div>
 
@@ -249,7 +249,7 @@
                             <i class="fa fa-question-circle"></i>
                         </div>
                         <h4 class="mb-2">How can I avoid GMOs?</h4>
-                        <p>In the US, GMOs are in majority of conventional processed food, to avoid GMOs. Look for the NON-GMO product verfied label.</p>
+                        <p>In the US, GMOs are in majority of conventional processed food, to avoid GMOs. Look for the NON-GMO product verified label.</p>
                     </div>
                 </div>
             </div>
@@ -302,7 +302,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/review.png" height="100px" width="75px"></i>
                         <h3>Document Review</h3>
-                        <p>EKO-GUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the reiews</p>
+                        <p>EKO-GUARANTEE technical evaluator reviews the documents you have submitted. We may ask for clarification or more information during the review.</p>
                     </div>
                 </div>
 
@@ -310,7 +310,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/submit.png" height="75px" width="75px"></i>
                         <h3>On-Site Inspection Ment Review</h3>
-                        <p>EKO-GUARANTEE will need to schedule an on-site inspection of your facilities. This is determined by review of your risk assessment.</p>
+                        <p>EKO-GUARANTEE will need to schedule an on-site inspection of your facilities. This is determined by a review of your risk assessment.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 col-md-6 ">
@@ -324,7 +324,7 @@
                     <div class="web-service-block">
                         <i class=""><img src ="images/icon/cert.png" height="75px" width="75px"></i>
                         <h3>Certification And Ongoing Compliance</h3>
-                        <p>After approval, eligible to use your NON-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to the scope mid year.</p>
+                        <p>After approval, eligible to use your NON-GMO mark. An annual renewal evaluation will take place from this point forward. Products and facilities can be added to the scope of mid-year.</p>
                     </div>
                 </div>
             </div>
@@ -341,7 +341,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <p class="lead text-white">Our certification is flexible and focused on meeting the market requirements and standards </p>
+                    <p class="lead text-white">Our certification is flexible and focused on meeting the market requirements and standards.</p>
                 </div>
             </div>
         </div>
@@ -356,7 +356,7 @@
                     <a href="service.html">  <img src="images/projects/verif.jpg" alt="" class="img-fluid"> </a>
                       <div class="project-content">
                           <h4>NON-GMO project verification</h4>
-                          <p>Project Verification is applicable at various supply chain levels</p>
+                          <p>Project Verification is applicable at various supply chain levels.</p>
                       </div>
                   </div>
               </div>
@@ -365,7 +365,7 @@
                       <a href="service2.html"> <img src="images/projects/cert.jpg" alt="" class="img-fluid"></a>
                         <div class="project-content">
                             <h4>NON-GMO Certification</h4>
-                            <p>We provide market oriented solutions and certifications</p>
+                            <p>We provide market-oriented solutions and certifications.</p>
                         </div>
                     </div>
                 </div>
@@ -387,7 +387,7 @@
                         <a href="#" class="footer-brand text-white">
                             EKO-GUARANTEE
                         </a>
-                        <p>Certifying NON-GMO integrity to national and international standards .</p>
+                        <p>Certifying NON-GMO integrity to national and international standards.</p>
                     </div>
                 </div>
 
